# api-load-tester

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.demo  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
demo_api/: __init__.py  main.py
docs/: architecture.mmd
examples/: name.json
loadtest/: __init__.py  __main__.py  cli.py  models.py  report.py  runner.py
reports/: example.json
tests/: test_cli.py  test_models.py  test_report.py  test_runner.py
